# archives_app

./: .gitignore  AGENTS.md  Dockerfile  Pipfile  README.md  archiver.db  credentials.env  docker-compose.yml  make_celery.py  pyproject.toml  requirements.txt  run.py  worker.py
archiver/: ArchiverUtilities.py  __init__.py  archival_file.py  archiver.db  config.py  forms.py  helpers.py  models.py  routes.py  server_change.py  server_edit.py
archiver/templates/: account.html  inbox_item.html  inbox_top.html  layout.html  register.html  upload_file.html
archives_application/: __init__.py  app_config.py  archiver.db  celery_utils.py  config.py  models.py  utilities.py  utils.py
archives_application/archiver/: __init__.py  archival_file.py  archive_search.py  archiver_tasks.py  forms.py  fs_coordination.py  routes.py  server_edit.py  utilities.py
archives_application/main/: __init__.py  forms.py  main_tasks.py  routes.py  tasks.py
archives_application/project_tools/: __init__.py  forms.py  project_tools_tasks.py  routes.py
archives_application/static/: main.css
archives_application/templates/: about.html  account.html  archive_search.html  archive_search_results.html  archived_or_not.html  archiving_metrics.html  archivist_dashboard.html  batch_change.html  batch_move.html  batch_process_inbox.html  caan_drawings.html  caan_info.html  caan_projects.html  caan_search.html  caan_search_results.html  change_config_settings.html  (+23 more)
research/: archive_search_chunked_fts_plan.md  development_journal.md  user_search_feats_research.md  user_search_feature_spec.md
(+6 files in other folders)
