[project]
name = "archives-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "oauthlib>=3.3.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psycopg[binary,pool]>=3.3.2",
    "pymupdf>=1.26.5",
    "python-dateutil>=2.9.0.post0",
    "python-fmrest>=1.7.5",
    "redis>=5.2.1",
    "requests>=2.32.5",
    "rq>=2.6.0",
    "seaborn>=0.13.2",
]
